frontend/src/index.scss
:root {
    --bg: #fff;
    --text: #555;
    --mild-contrast: #0005;
    --button-bg: #bcd;
    --button-text: #444;
    .theme-dark {
        --bg: #000;
        --text: #999;
        --mild-contrast: #fff5;
        --good-contrast: #fffa;
        --button-bg: #345;
        --button-text: #999;
        a { color:#68a; }
        .dialog-confirm, .dialog-prompt { --color:#77a }
        .dialog-closer { background: #844 }
        .dialog-icon { color: #ccc; }
        .dialog-backdrop { background: #333b; }
    }
}
body {
    background: var(--bg);
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}
body, button, select { font-size: 12pt; }
#root {
    max-width: 50em;
    margin: auto;
}
body, input {
    color: var(--text);
}
code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}
input, select {
    padding: 0.3em 0.4em;
    border-radius: 0.5em;
    background: var(--bg);
    border-color: var(--mild-contrast);
    color: var(--good-contrast);
}
input[type=checkbox] {
    margin-right: 0.5em;
}

.icon {
    vertical-align: text-bottom;
    font-size: 1.2em;
}

a {
    text-decoration: none;
    color: #357;
}
button {
    background-color: var(--button-bg);
    color: var(--button-text);
    padding: 0.5em 1em;
    border: transparent;
    text-decoration: none;
    border-radius: 0.3em;
    vertical-align: middle;
    cursor: pointer;
}
button.toggled {
    opacity: .6;
}

.error-msg {
    background-color: #faa;
    color: #833;
}

header {
    position: sticky;
    top: 0;
    background: var(--bg);
    padding: .2em;
}

.ani-working { animation:1s blink infinite }

@keyframes blink {
    0% {opacity: 1}
    50% {opacity: 0.2}
}
@keyframes spin {
    from { transform: rotate(0deg); }
    to { transform: rotate(360deg); }
}
@keyframes fade-in {
    0% {opacity: 0}
    100% {opacity: 1}
}

.spinner {
    animation: 1s spin infinite;
}

.breadcrumb {
    padding: 0.1em 0.6em 0.2em;
    line-height: 1.8em;
    border-radius: 0.7em;
    background-color: var(--button-bg);
    color: var(--button-text);

    border-top: 1px solid #666;
    margin-right: -0.1em;
}
.breadcrumb:nth-child(-n+3) .icon {
    padding: 0 0.2em;
}
#folder-stats {
    font-size: 90%;
    margin: 0.4em 0 0 0.5em;
    float: right;
    & .icon {
        margin-right: .3em;
    }
}
header input {
    width: 100%;
    margin: 0.2em auto;
    box-sizing: border-box;
}

ul.dir {
    padding: 0;
    margin: 0;
    clear: both;
    & li {
        display: block;
        list-style-type: none;
        margin-bottom: 0.3em;
        padding: 0.3em;
        border-top: 1px solid var(--button-bg);

        & a {
            word-break: break-word;

            & .icon {
                margin-right: .3em;
            }
            &.container-folder:hover {
                text-decoration: underline;
            }
        }
        & .entry-props {
            float: right;
            font-size: 90%;
            margin-left: 12px;
            margin-top: 0.2em;

            & .icon {
                margin:0 .3em;
            }
            & .entry-size {
                display:inline-block;
            }
        }
    }
}

#menu-panel {
    margin-bottom: 0.2em;

    & button {
        margin: 0.1em;
    }
}
#searched {
    margin: .2em;
}
#user-panel {
    display:flex;
    flex-direction: column;
    gap: 1em;
}

button label {
    cursor: inherit;
    margin-left: 0.5em;
}

.dialog-backdrop.working {
    font-size: 5em;
    animation: 1s fade-in;
}

@media (max-width: 40em) {
    body, button, select { font-size: 16pt; }
    #menu-bar {
        display: flex;
        justify-content: space-between;
        align-content: stretch;
        & button label { display: none } /* icons only */
    }
    .breadcrumb .icon {
        font-size:24px;
    }
}

